objects/TR_Retention__Retention_Contract_Value_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TR_Retention__Contract_Value_High__c</fullName>
        <label>Contract Value High</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Contract_Value_Low__c</fullName>
        <label>Contract Value Low</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Product_Family__c</fullName>
        <description>Saves the product family values</description>
        <label>Product Family</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Sub_Business_Unit__c</fullName>
        <label>Sub-Business Unit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Retention Contract Value Configuration</label>
</CustomObject>